--- a/order2/azure-pipelines.yml
+++ b/order2/azure-pipelines.yml
@@ -14,7 +14,7 @@ variables:
   # containerRegistryDockerConnection: 'acr'
   # environment: 'aks.default'
 - name: imageRepository
-  value: 'order'
+  value: 'order2'
 - name: dockerfilePath
   value: '**/Dockerfile'
 - name: tag
