--- a/order2/cloudbuild.yaml
+++ b/order2/cloudbuild.yaml
@@ -95,7 +95,7 @@ steps:
                     failureThreshold: 5
         EOF
 substitutions:
-  _PROJECT_NAME: order
+  _PROJECT_NAME: order2
 options:
   env:
     #    # location/name of GKE cluster (used by all kubectl commands)
