--- a/order2/kubernetes/deployment.yaml
+++ b/order2/kubernetes/deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: order
+  name: order2
   labels:
-    app: order
+    app: order2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: order
+      app: order2
   template:
     metadata:
       labels:
-        app: order
+        app: order2
     spec:
       containers:
-        - name: order
-          image: username/order:latest
+        - name: order2
+          image: username/order2:latest
           ports:
             - containerPort: 8080
           readinessProbe:
