--- a/order2/kubernetes/service.yaml
+++ b/order2/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: order
+  name: order2
   labels:
-    app: order
+    app: order2
 spec:
   ports:
     - port: 8080
       targetPort: 8080
   selector:
-    app: order
+    app: order2
