--- a/order2/pom.xml
+++ b/order2/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>labshopcompleted</groupId>
-	<artifactId>order</artifactId>
+	<artifactId>order2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>order</name>
+	<name>order2</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
